Sprint042 | Fix fonts and spacing

--- a/app/styles/containers/glossary/_glossary.scss
+++ b/app/styles/containers/glossary/_glossary.scss
@@ -6,6 +6,7 @@
     font-family: $font-family-open-sans-bold;
     font-size: $font-size-lg;
     text-transform: uppercase;
+    margin-top: 1rem;
   }
   .subtitle-glossary {
     color: $color-lightGray;
